Horizontal-scrollbar problem fixed

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -15,7 +15,6 @@ a {
 
 body {
     min-height: 100vh;
-    min-width: 100vw;
 }
 
 main {
